# stream-orchestrator

./: .env.example  .gitignore  README.md  adopt_existing_db.bat  alembic.ini  code-style.md  main.py  pyproject.toml  start.bat
.github/workflows/: ci.yml  tests.yml
app/: config.py  db.py  logging_setup.py  main.py  prompt_store.py  prompts.py  text_utils.py
app/api/: admin_routes.py  error_handlers.py  request_id.py  routes.py
app/integrations/: llm_client.py
app/integrations/llm/: base.py  factory.py  mock_provider.py  openai_provider.py
app/models/: __init__.py  chat.py  knowledge.py  provider_runtime_state.py  summary.py  trace_event.py  trace_run.py  user_memory.py
app/observability/: request_context.py  trace_context.py  trace_helpers.py  trace_recorder.py  trace_status.py
app/schemas/: admin_llm_config.py  dynamic_prompt.py  errors.py  events.py  responses.py
app/services/: chat_memory.py  dossier.py  dynamic_prompt_service.py  llm_config_admin_service.py  llm_config_source.py  llm_execution_service.py  llm_registry.py  provider_state_store.py  router.py  style_prompt.py  style_registry.py  styles_admin_service.py  trace_read_service.py  user_memory_service.py
app/services/features/: __init__.py  base.py  handlers.py  selector.py
app/services/file_readers/: weekly_movies.py
app/static/admin/: console.css  llm_config.js  playground.js  styles.js  traces.js
app/templates/admin/: _status_panel.html  base.html  llm_config.html  playground.html  playground_placeholder.html  styles.html  traces.html  traces_placeholder.html
app/templates/admin/partials/: sidebar.html
config/: llm_profiles.yml.example  llm_styles.yml.example
data/dynamic/: weekly_movies.txt
example-prompts/: dossier_system.txt  user_memory_user_template.txt  weekly_movies_system.txt
example-prompts/dynamic/: loot_system.txt  loot_template.txt
examples/streamer.bot/: ingest.cs  replay.cs
migrations/: env.py
migrations/versions/: 528ab8411a47_add_memory_pipeline_fields.py  67a6d3ac58d2_add_provider_runtime_state.py  9f1c2d3e4a5b_add_trace_tables.py  b2c4d6e8f0a1_add_memory_extraction_attempt_fields.py  c1d1b5fb56d4_initial_schema.py  f7ca29f2917a_add_memory_pipeline_fields.py
prompts/: chat_system.txt  chat_user_template.txt  dossier_system.txt  dossier_user_template.txt  user_memory_system.txt  weekly_movies_system.txt  weekly_movies_user_template.txt
streamer.bot/: replay.cs
tests/: conftest.py  test_admin_routes.py  test_api_endpoints.py  test_chat_memory.py  test_db.py  test_dynamic_prompt_service.py  test_feature_routing.py  test_llm_config_admin_service.py  test_llm_failover.py  test_llm_registry.py  test_observability_trace.py  test_prompt_store.py  test_provider_state_store.py  test_router_features.py  test_style_registry.py  test_styles_admin_service.py  test_trace_status.py  test_user_memory_service.py
